chore: update generate keys workflow to update keys automatically
Signed-off-by: Rudraksh Tyagi <rudraksh875@gmail.com>

--- a/.github/workflows/generate_keys.yml
+++ b/.github/workflows/generate_keys.yml
@@ -26,6 +26,16 @@ jobs:
       - name: Dump keys from the spreadsheet
         run: |
           curl -L "${{ env.spreadsheet_uri }}" -o "./keys.csv";
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.20"
+
+      - name: Run Go program to generate permissions_constants.js
+        run: |
+          go run .github/scripts/generate_permissions.go keys.csv ui/utils/permissions_constants.js
+
       - name: Create permissions folder
         run: |
           [ ! -d "./server/permissions" ] && mkdir -p "./server/permissions";
